--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,8 @@ android {
 }
 
 dependencies {
-
+    implementation 'androidx.compose.material:material-icons-extended:1.2.1'
+    implementation 'com.github.Gurupreet:FontAwesomeCompose:1.1.0'
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
@@ -64,4 +65,5 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
 }
