添加轮播图接口

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,5 +76,6 @@ dependencies {
     implementation rootProject.ext.dependencies.android_utils
     //图片加载
     implementation rootProject.ext.dependencies.glide
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
 
 }
