--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,5 +82,9 @@ dependencies {
     implementation "com.google.accompanist:accompanist-swiperefresh:0.18.0"
     // LOTTIE
     implementation "com.airbnb.android:lottie-compose:4.1.0"
+    //Paging 3.0
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha14'
+    implementation "androidx.paging:paging-runtime-ktx:3.1.0-rc01"
+    implementation 'androidx.paging:paging-common-ktx:3.1.1'
 
 }
