--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
 
     // LOTTIE
     implementation "com.airbnb.android:lottie-compose:4.1.0"
+    implementation "com.airbnb.android:lottie:4.1.0"
+
     //Paging 3.0
     implementation 'androidx.paging:paging-compose:1.0.0-alpha14'
     implementation "androidx.paging:paging-runtime-ktx:3.1.0-rc01"
