--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
+    id "org.jetbrains.kotlin.kapt"
 
 }
 
@@ -19,6 +20,18 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
+        }
+        //room
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                        //配置并启用将数据库架构导出到给定目录中的json文件的功能
+                        "room.schemaLocation"  : "$projectDir/schemas".toString(),
+                        //启用gradle增量注解处理器
+                        "room.incremental"     : "true",
+                        //配置room以重写查询，使其顶部星形投影在展开后包含DAO方法返回类型中定义的列
+                        "room.expandProjection": "true"]
+            }
         }
     }
 
@@ -46,7 +59,10 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+
+
 }
+def room_version = "2.5.0"
 
 dependencies {
     implementation 'androidx.compose.material:material-icons-extended:1.2.1'
@@ -103,6 +119,14 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-livedata:1.0.5"
     //持久化存储
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+    //room
+    implementation "androidx.room:room-runtime:$room_version"
+    //room 协程
+    implementation "androidx.room:room-ktx:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // To use Kotlin annotation processing tool (kapt)
+    kapt "androidx.room:room-compiler:$room_version"
 
 
 }
