--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ plugins {
 
 android {
     namespace 'com.ldf.wanandroidcompose'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.ldf.wanandroidcompose"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -42,18 +42,20 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.5.3"
     }
+//
+//    kotlinOptions {
+//        jvmTarget = '1.8'
+//    }
     buildFeatures {
         compose true
     }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
-    }
+
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
@@ -65,16 +67,17 @@ android {
 def room_version = "2.5.0"
 
 dependencies {
-    implementation 'androidx.compose.material:material-icons-extended:1.2.1'
+    implementation 'androidx.compose.material:material-icons-extended:1.3.0'
     implementation 'com.github.Gurupreet:FontAwesomeCompose:1.1.0'
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material:material:1.3.1'
+    implementation 'androidx.glance:glance-appwidget:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -93,7 +96,7 @@ dependencies {
     implementation rootProject.ext.dependencies.android_utils
     //图片加载
     implementation rootProject.ext.dependencies.glide
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     // ACCOMPANIST
     implementation "com.google.accompanist:accompanist-placeholder-material:0.18.0"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.18.0"
@@ -103,20 +106,20 @@ dependencies {
 
     // airbnb
     implementation "com.airbnb.android:lottie-compose:4.1.0"
-    implementation "com.airbnb.android:lottie:4.1.0"
+    implementation "com.airbnb.android:lottie:5.2.0"
     implementation "com.airbnb.android:mavericks-compose:3.0.3"
 
     //Paging 3.0
     implementation 'androidx.paging:paging-compose:1.0.0-alpha14'
-    implementation "androidx.paging:paging-runtime-ktx:3.1.0-rc01"
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
     implementation 'androidx.paging:paging-common-ktx:3.1.1'
     /**
      * compose提供有viewModel等其他方便的函数
      * 以下为Compose扩展库
      */
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
     //提供observeAsState等方法
-    implementation "androidx.compose.runtime:runtime-livedata:1.0.5"
+    implementation "androidx.compose.runtime:runtime-livedata:1.3.0"
     //持久化存储
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     //room
@@ -127,6 +130,9 @@ dependencies {
 
     // To use Kotlin annotation processing tool (kapt)
     kapt "androidx.room:room-compiler:$room_version"
+    //小部件
+    implementation "androidx.glance:glance:1.0.0"
+
 
 
 }
