--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+
+        <receiver
+         android:name=".ui.widget.ArticleListWidget"
+         android:exported="false">
+         <intent-filter>
+           <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+         </intent-filter>
+
+         <meta-data
+           android:name="android.appwidget.provider"
+           android:resource="@xml/article_list_widget_info" />
+    </receiver>
+
+</application>
 
 </manifest>
