--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,10 +88,10 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.5.3"
 
     // 网络相关
-    api rootProject.ext.dependencies.retrofit
-    api rootProject.ext.dependencies.converterGson
-    api rootProject.ext.dependencies.loggingInterceptor
-    api rootProject.ext.dependencies.PersistentCookieJar
+    implementation rootProject.ext.dependencies.retrofit
+    implementation rootProject.ext.dependencies.converterGson
+    implementation rootProject.ext.dependencies.loggingInterceptor
+    implementation rootProject.ext.dependencies.PersistentCookieJar
     //日志
     implementation rootProject.ext.dependencies.android_utils
     //图片加载
